Table is now semi-responsive. Updates according to year and selected row, but when a row is selected the table doesnt save the year