@@ -2,7 +2,6 @@ package GUI;
 
 import DataHandling.FileReader;
 import DataHandling.PlayerStats;
-import GUI.TablePanel;
 
 import java.awt.*;
 import java.util.ArrayList;
@@ -11,60 +10,35 @@ import javax.swing.*;
 // panel to display 4 data visualizations
 public class DataPanel extends JPanel {
     private ArrayList<PlayerStats> data;
-    private PlayerStats detailData;
+    private ContainerPanel containerPanel;
     private JPanel tablePanel;
     private JPanel detailsPanel;
     private JPanel statsPanel;
     private JPanel chartPanel;
 
-
     // create a data panel and update display
-    public DataPanel() {
+    public DataPanel(int year, PlayerStats detailData, ContainerPanel containerPanel) {
         //set up frame
         setPreferredSize(new Dimension(Constants.WIDTH, Constants.HEIGHT));
         setLayout(new GridLayout(2,2));
 
+        if (containerPanel == null) {
+            System.out.print("WHAT THE FUCK");}
+
         //set up default data
-        updateDisplay(Constants.YEARS[0], "");
-    }
-
-    public interface DisplayUpdater {
-        void updateDisplay(int year, String playerName);
-    }
-
-    // takes in a year (from 2023-2018) and updates data panels accordingly
-    public void updateDisplay(int year, String playerName) {
-        this.removeAll();
-
-        String csvPath = "C:\\Users\\User\\INTELLIJ\\Lab 3\\Data\\UARK_Basketball_Stats_" + year + ".csv";
-        System.out.println(csvPath);
-
         try {
-            data = FileReader.readPlayerStats(csvPath);
+            data = FileReader.readPlayerStats((Constants.CSV_HEADER + year + ".csv"));
 
-            //if no playerName provided, default to first player
-            //NOTE: this is because the controlPanel doesn't have access to selecting player, but table listener
-            //should be able to update using the same method.
-            if (playerName == "") {
-                playerName = data.get(0).name();
-            }
-
-            //get playerStats based on name
-            for (PlayerStats playerStats : data) {
-                if (playerStats.name().equals(playerName)){
-                    detailData = playerStats;
-                } else {
-                    detailData = data.get(0);
-                }
+            //if no playerName provided, default to first player (for default constructor)
+            if (detailData == null) {
+                detailData = data.getFirst();
             }
 
             //create each sub-panel
-            tablePanel = new TablePanel(data);
+            tablePanel = new TablePanel(data, containerPanel);
             detailsPanel = new DetailsPanel(detailData);
             statsPanel = new StatsPanel(data);
             chartPanel = new ChartPanel();
-
-            //create details panel based on table contents
 
             //add panels to this
             add(tablePanel);
@@ -77,5 +51,13 @@ public class DataPanel extends JPanel {
         } catch (Exception e) {
             e.printStackTrace();
         }
+    }
+
+    public void setContainerPanel(ContainerPanel containerPanel) {
+        this.containerPanel = containerPanel;
+    }
+
+    public ArrayList<PlayerStats> getData() {
+        return data;
     }
 }
